Fix upload button vertical alignment

--- a/src/app/shared/upload/uploader/uploader.component.scss
+++ b/src/app/shared/upload/uploader/uploader.component.scss
@@ -36,3 +36,7 @@
 .ds-document-drop-zone-inner-content p {
   font-size: calc(var(--bs-font-size-lg) * 2.5);
 }
+
+.btn-link{
+  vertical-align: baseline;
+}
